--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,12 +1,13 @@
 .header {
   display: grid;
   align-items: center;
+  justify-items: center;
   height: 100vh;
   background-color: var(--color-primary);
-  overflow-x: hidden;
 }
 
 .header-content {
+  position: absolute;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -33,8 +34,11 @@ span {
 .header-content > a {
   margin-top: 20px;
   padding: 12px 25px;
+  font-size: 1.25rem;
   border: 2px solid #04C2C9;
+  transition: all 500ms;
   z-index: 5;
+  color: white;
   background-color: var(--color-primary);
 }
 
