--- a/src/components/headerBackground/headerBackground.css
+++ b/src/components/headerBackground/headerBackground.css
@@ -1,14 +1,15 @@
-@import "../../assets/animations.css";
 
 .header-background {
-  position: absolute;
+  position: sticky;
   top: 0;
 	left: 0;
+  overflow-x: hidden;
 }
 
 .icon-row {
   z-index: 3;
   display: flex;
+  overflow: hidden;
 }
 
 .header-background svg {
@@ -17,6 +18,7 @@
   z-index: 3;
   transition: all 1s;
   opacity: 0.5;
+  overflow: hidden;
 }
 
 .header-background svg:hover {
