--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,30 +1,73 @@
 .card {
+  position: relative;
   overflow: hidden;
   width: 24%;
+  background-position: center;
+  background-size: cover;
   height: 20em;
   background-color: #04C2C9;
   text-align: center;
-  display: grid;
-  align-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  gap: 0;
+  isolation: isolate;
 }
 
-.card, .card h2, .card button {
-  transition: all 300ms ease-in-out;
+.card * {
+  transition: all 225ms;
 }
 
-.card:hover > h2 {
-  transform: translateY(-10em);
+.card-details {
+  transform: translateY(-15em)
 }
 
-.card:hover >  button {
-  transform: translateY(-2em);
+.card-details > ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.card-details ul li {
+  margin: 0.5em;
+  color: white;
+  font-size: 1.25em;
+  font-weight: bold;
+  /* text-shadow: -1.5px 0 #04C2C9, 0 1.5px #04C2C9, 1.5px 0 #04C2C9, 0 -1.5px #04C2C9; */
 }
 
 .card button {
-  padding: 1em;
-  border: none;
-  border-radius: 1em;
+  padding: 0.75em 1.25em;
+  border-radius: 20px;
+  border: solid 2px #04C2C9;
+  color: #04C2C9;
+  font-weight: bold;
   font-size: 1em;
-  margin: 0 auto;
+  background-color: white;
   transform: translateY(10em);
+}
+
+.card button:hover {
+  box-shadow: 0 0 60px white;
+  cursor: pointer;
+}
+
+.card:hover::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+  background-color: #04C2C9;
+  opacity: 0.5;
+}
+
+.card:hover .card-details {
+  transform: translateY(0);
+}
+
+.card:hover button {
+  transform: translateY(0)
 }
