--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,73 +1,99 @@
 .card {
   position: relative;
   overflow: hidden;
-  width: 24%;
-  background-position: center;
-  background-size: cover;
-  height: 20em;
-  background-color: #04C2C9;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  gap: 0;
-  isolation: isolate;
+  border-radius: 1rem;
+  min-width: 250px;
+  max-width: 49%;
+  flex-grow: 1;
+  height: 35em;
+
+  & * {
+    transition: all 400ms;
+  }
 }
 
-.card * {
-  transition: all 225ms;
+.card > img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-position: center;
+  object-fit: cover;
+  /* fixing sharpness on scaling */
+  -webkit-backface-visibility: hidden; 
+  backface-visibility: hidden;
+  -ms-transform: translateZ(0); /* IE 9 */
+  -webkit-transform: translateZ(0); /* Chrome, Safari, Opera */
+  transform: translateZ(0);
 }
 
 .card-details {
-  transform: translateY(-15em)
-}
-
-.card-details > ul {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.card-details ul li {
-  margin: 0.5em;
-  color: white;
-  font-size: 1.25em;
-  font-weight: bold;
-  /* text-shadow: -1.5px 0 #04C2C9, 0 1.5px #04C2C9, 1.5px 0 #04C2C9, 0 -1.5px #04C2C9; */
-}
-
-.card button {
-  padding: 0.75em 1.25em;
-  border-radius: 20px;
-  border: solid 2px #04C2C9;
-  color: #04C2C9;
-  font-weight: bold;
-  font-size: 1em;
-  background-color: white;
-  transform: translateY(10em);
-}
-
-.card button:hover {
-  box-shadow: 0 0 60px white;
-  cursor: pointer;
-}
-
-.card:hover::after {
-  content: '';
   position: absolute;
-  inset: 0;
-  z-index: -1;
-  background-color: #04C2C9;
-  opacity: 0.5;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  color: white;
+  background: linear-gradient(180deg, rgb(247, 244, 244), rgba(3, 151, 156, 0.505) 50%, rgba(27, 26, 85, 1));
+  /* fixing sharpness on scaling */
+  -webkit-backface-visibility: hidden; 
+  backface-visibility: hidden;
+  -ms-transform: translateZ(0); /* IE 9 */
+  -webkit-transform: translateZ(0); /* Chrome, Safari, Opera */
+  transform: translateZ(0);
+  
+  & h2 {
+    transform: translateY(-10em);
+  }
+
+  & p {
+    margin: 0 20px;
+  }
+
+  & .buttons-container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  & button {
+    transform: translateY(10em);
+    font-size: 1em;
+    cursor: pointer;
+    padding: 10px 20px;
+    border: 2px solid #04C2C9;
+    color: white;
+    background-color: var(--color-primary);
+  }
+
+  & button:hover {
+    box-shadow: 0 0 60px #04C2C9;
+    background-color: #04C2C9;
+  }
 }
 
-.card:hover .card-details {
-  transform: translateY(0);
+.card:hover > img {
+  filter: blur(4px);
+  -webkit-filter: blur(4px);
 }
 
-.card:hover button {
-  transform: translateY(0)
+.card:hover > .card-details {
+  opacity: 1;
+  scale: 1.05;
+
+  & h2 {
+    transform: translateY(0);
+  }
+
+  & button {
+    transform: translateY(0);
+  }
+}
+
+@media (max-width: 600px) {
+  .card {
+    max-width: 90%;
+  }
 }
