--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,6 +1,6 @@
 #projects {
   width: 100%;
-  padding: 4em 0;
+  padding-top: 4em;
 }
 
 .projects-content {
@@ -30,12 +30,15 @@
   color: white;
 }
 
-
 .cards-container {
-  padding: 2em 0;
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-wrap: wrap;
   gap: 1em;
+}
+
+@media (max-width: 600px) {
+  .projects-content {
+    width: 90%;
+  }
 }
