--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -5,7 +5,7 @@
   min-width: 250px;
   max-width: 49%;
   flex-grow: 1;
-  height: 35em;
+  height: 30em;
 
   & * {
     transition: all 400ms;
@@ -55,17 +55,11 @@
 
   & .buttons-container {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
   }
 
   & button {
     transform: translateY(10em);
-    font-size: 1em;
-    cursor: pointer;
-    padding: 10px 20px;
-    border: 2px solid #04C2C9;
-    color: white;
-    background-color: var(--color-primary);
   }
 
   & button:hover {
