--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -35,18 +35,22 @@ span {
   font-family: "Roboto Mono", monospace;
 }
 
-.header-content > a {
+.header-buttons-container {
   margin-top: 20px;
-  padding: 12px 25px;
-  font-size: 1.25rem;
-  border: 2px solid #04C2C9;
-  transition: all 500ms;
-  cursor: pointer;
-  z-index: 5;
-  color: white;
-  background-color: var(--color-primary);
-}
 
-.header-content > a:hover {
-  background-color: #04C2C9;
+  & a {
+    font-size: 12pt;
+    cursor: pointer;
+    padding: 10px 20px;
+    margin: 0 10px;
+    border: 2px solid #04C2C9;
+    color: white;
+    background-color: var(--color-primary);
+    transition: all 400ms;
+  }
+
+  & a:hover {
+    box-shadow: 0 0 20px #04C2C9;
+    background-color: #04C2C9;
+  }
 }
