--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -23,11 +23,13 @@
   cursor: pointer;
   font-size: 1.15em;
   transition: all 200ms ease-in;
+  color: #444649;
 }
 
 .projects-nav button:hover, .projects-nav .active {
   background-color: #04C2C9;
   color: white;
+  box-shadow: none;
 }
 
 .cards-container {
