--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,20 @@ svg {
 p {
   letter-spacing: .1rem;
   line-break: strict;
+  font-size: 12pt;
 }
 
+button {
+  font-size: 12pt;
+  cursor: pointer;
+  padding: 10px 20px;
+  margin: 5px 0;
+  border: 2px solid #04C2C9;
+  color: white;
+  background-color: var(--color-primary);
+}
 
+button:hover {
+  box-shadow: 0 0 60px #04C2C9;
+  background-color: #04C2C9;
+}
