--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,13 @@
   min-height: 81vh;
   background-color: var(--color-tertiary);
 }
+
+@media (max-width: 600px) {
+  p, a, button, span {
+    font-size: 8pt !important;
+  }
+  
+  h4 {
+    font-size: 1.15rem !important;
+  }
+}
