--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -5,34 +5,11 @@
 
 .projects-content {
   width: 70%;
-  margin: 5px auto;
-}
-
-.projects-nav {
-  display: flex;
-  justify-content: center;
-  gap: 5em;
-  padding: 2em 0;
-}
-
-.projects-nav button {
-  padding: 1em;
-  border: none;
-  border-bottom: 2px solid #04C2C9;
-  background-color: transparent;
-  cursor: pointer;
-  font-size: 1.15em;
-  transition: all 200ms ease-in;
-  color: #444649;
-}
-
-.projects-nav button:hover, .projects-nav .active {
-  background-color: #04C2C9;
-  color: white;
-  box-shadow: none;
+  margin: 2rem auto;
 }
 
 .cards-container {
+  margin-top: 3rem;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
