--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -12,6 +12,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
   background-color: var(--color-primary);
   z-index: 3;
   margin: 0 auto;
@@ -27,6 +28,7 @@
 .header-content > h1 {
   z-index: 5;
   background-color: var(--color-primary);
+  letter-spacing: -1px;
 }
 
 span {
