--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,11 @@
   font-style: normal;
 }
 
+#header {
+  height: 100vh;
+  width: 100vw;
+}
+
 #about {
   min-height: 95vh;
   background-color: white;
@@ -22,6 +27,37 @@
 #contact {
   min-height: 81vh;
   background-color: var(--color-tertiary);
+}
+
+.button-type-A {
+  font-size: 12pt;
+  cursor: pointer;
+  outline: none;
+  padding: 10px 15px;
+  margin: 5px 10px;
+  border: 2px solid #04C2C9;
+  color: white;
+  background-color: var(--color-primary);
+  transition: background-color 400ms, scale 400ms, box-shadow 400ms;;
+  /* fixing sharpness on scaling */
+  -webkit-backface-visibility: hidden; 
+  backface-visibility: hidden;
+  -ms-transform: translateZ(0); /* IE 9 */
+  -webkit-transform: translateZ(0); /* Chrome, Safari, Opera */
+  transform: translateZ(0);
+}
+
+.button-type-A:hover, .button-type-A:focus {
+  box-shadow: 0 0 20px #04C2C9;
+  scale: 1.10;
+  background-color: #04C2C9;
+}
+
+.button-type-B {
+  font-size: 14pt;
+  color: white;
+  transition: background-color 400ms, scale 400ms, box-shadow 400ms;;
+  padding: 15px 15px;
 }
 
 @media (max-width: 600px) {
