--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -25,8 +25,7 @@
   margin: 10px 0;
 }
 
-.personal-info .bar-container {
-  width: 100%;
+.bar-container {
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -69,25 +68,25 @@
 }
 
 /* rwd */
-.mobile-carousel {
+.fantasy-carousel {
   display: grid;
   place-items: center;
   grid-template-columns: repeat(3, 150px);
 }
 
-.mobile-carousel svg {
+.fantasy-carousel svg {
   animation: carousel-horizontal 6000ms infinite;
 }
 
-.mobile-carousel svg:nth-child(1) {
+.fantasy-carousel svg:nth-child(1) {
   width: 2rem;
 }
 
-.mobile-carousel svg:nth-child(2) {
+.fantasy-carousel svg:nth-child(2) {
   width: 3.5rem;
 }
 
-.mobile-carousel svg:nth-child(3) {
+.fantasy-carousel svg:nth-child(3) {
   width: 5rem;
 }
 
