--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -3,7 +3,7 @@
   overflow: hidden;
   border-radius: 1rem;
   height: 70vh;
-  width: 32%;
+  width: 100% !important;
   transition: scale 400ms;
 
   & * {
@@ -60,11 +60,6 @@
   & button {
     transform: translateY(10em);
   }
-
-  & button:hover {
-    box-shadow: 0 0 60px #04C2C9;
-    background-color: #04C2C9;
-  }
 }
 
 .card:hover {
@@ -86,17 +81,5 @@
 
   & button {
     transform: translateY(0);
-  }
-}
-
-@media (max-width: 1600px) {
-  .card {
-    width: 49%;
-  }
-}
-
-@media (max-width: 800px) {
-  .card {
-    width: 90%;
   }
 }
