--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -16,18 +16,16 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-
-
-  & span {
-    align-self: center;
-    color: white;
-    font-size: 1.20em;
-    margin: 10px 0;
-    font-family: "REM", sans-serif;
-  }
 }
 
-.circles{
+.contact-content span {
+  color: white;
+  font-size: 1.20em;
+  margin: 10px auto;
+  font-family: "REM", sans-serif;
+}
+
+.circles {
   position: absolute;
   top: 0;
   left: 0;
