--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,34 +1,24 @@
 .header {
-  display: grid;
-  align-items: center;
-  justify-items: center;
-  height: 100vh;
+  position: relative;
   background-color: var(--color-primary);
 }
 
 .header-content {
   position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
-  background-color: var(--color-primary);
-  z-index: 3;
-  margin: 0 auto;
-  padding: 40px;
-  border-radius: 50px;
-  box-shadow: 0 0 40px aqua;
+  flex-direction: column;
 }
 
-.header-content h1, .header-content p, .header-content span {
-  font-weight: bold;
-}
-
-.header-content > h1 {
-  z-index: 5;
-  background-color: var(--color-primary);
+.header-content  h1, .header-content  h2 {
   letter-spacing: -1px;
+  width: fit-content;
+  text-align: center;
 }
 
 span {
@@ -37,21 +27,5 @@ span {
 }
 
 .header-buttons-container {
-  margin-top: 20px;
-
-  & a {
-    font-size: 12pt;
-    cursor: pointer;
-    padding: 10px 20px;
-    margin: 0 10px;
-    border: 2px solid #04C2C9;
-    color: white;
-    background-color: var(--color-primary);
-    transition: all 400ms;
-  }
-
-  & a:hover {
-    box-shadow: 0 0 20px #04C2C9;
-    background-color: #04C2C9;
-  }
+  margin-top: 1.5rem;
 }
