--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "REM", sans-serif;
+  font-family: "REM", sans-serif !important;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
