--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -8,16 +8,20 @@
   margin: 2rem auto;
 }
 
+.projects-content h3 {
+  font-weight: 700;
+  margin-bottom: 2rem;
+}
+
 .cards-container {
-  margin-top: 3rem;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 1em;
+  gap: 2em;
 }
 
 .cards-container > div {
-  width: 32%;
+  width: 31%;
 }
 
 @media (max-width: 800px) {
