--- a/src/assets/animations.css
+++ b/src/assets/animations.css
@@ -49,3 +49,17 @@
     transform: translateY(0px);
   }
 }
+
+@keyframes rise-and-spin {
+  0%{
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+    border-radius: 0;
+  }
+
+  100%{
+    transform: translateY(-1000px) rotate(720deg);
+    opacity: 0;
+    border-radius: 50%;
+  }
+}
