--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,14 +1,12 @@
-.footer {
-
+footer {
+  position: absolute;
   padding: 10px 0;
+  bottom: 0;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--color-primary);
+  background-color: rgb(var(--color-primary));
   color: white;
-  box-shadow: 0px -20px 60px #04C2C9;
+  box-shadow: 0px -20px 60px rgb(var(--color-quinary));
+  transition: box-shadow 400ms;
 
   & ul {
     list-style: none;
@@ -17,12 +15,18 @@
   }
 
   & a {
-    color: #04C2C9;
+    color: rgb(var(--color-quinary));
     text-decoration: none;
     transition: all 200ms;
   }
 
   & a:hover {
-    filter: brightness(150%)
+    filter: brightness(175%)
+  }
+}
+
+@media (max-width: 600px) {
+  footer {
+    font-size: 8pt;
   }
 }
