--- a/src/components/hexagon/hexagon.css
+++ b/src/components/hexagon/hexagon.css
@@ -1,7 +1,7 @@
 .hexagon {
   height: 9rem;
   width: 9rem;
-  background: #04C2C9;
+  background: rgb(var(--color-quinary));
   -webkit-clip-path: polygon(25% 5%, 75% 5%, 100% 50%, 75% 95%, 25% 95%, 0% 50%);
   clip-path: polygon(25% 5%, 75% 5%, 100% 50%, 75% 95%, 25% 95%, 0% 50%);
   display: flex;
@@ -11,19 +11,24 @@
   transition: all 400ms;
 }
 
-.hexagon-hobbies::before {
+.hexagon-priorities::before {
   position: absolute;
   content: '';
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  background-image: linear-gradient(180deg, rgba(3, 151, 156, 0.505) 65%, rgba(27, 26, 85, 1) 80%);
-  z-index: -1;
+  background-image: linear-gradient(180deg, rgb(var(--color-quinary)) 70%, rgb(var(--color-primary)) 85%);
   transition: all 400ms;
   opacity: 0;
 }
 
-.hexagon-hobbies:hover::before {
+.hexagon-priorities:hover::before {
   opacity: 1;
+}
+
+@media (max-width: 600px) {
+  .hexagon-priorities:hover::before {
+    opacity: 0;
+  }
 }
