--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -27,22 +27,23 @@
   }
 
   & .close-button {
-    border: 2px solid #04C2C9;
+    border: 2px solid rgb(var(--color-quinary));
     cursor: pointer;
+    font-weight: 700;
     border-radius: 1rem;
     margin-top: -2rem;
     margin-right: -2rem;
     margin-left: auto;
     padding: 10px 15px;
     background-color: transparent;
-    color: #04C2C9;
+    color: rgb(var(--color-quinary));
     transition: all 400ms;
   }
 
   & .close-button:hover {
     box-shadow: none;
     color: white;
-    background-color: #04C2C9;
+    background-color: rgb(var(--color-quinary));
   }
 
   & p {
@@ -51,7 +52,7 @@
   }
 
   & h4 {
-    color: var(--color-quintenary);
+    color: rgb(var(--color-quinary));
     margin-top: -1rem;
     font-weight: 700;
     text-align: center;
@@ -68,13 +69,14 @@
       padding: 0.75em 1.25em;
       margin: 0.25em;
       text-decoration: none;
-      color: var(--color-quintenary);
-      border: 2px solid var(--color-quintenary);
+      font-weight: 700;
+      color: rgb(var(--color-quinary));
+      border: 2px solid rgb(var(--color-quinary));
       border-radius: 0.5em;
     }
 
     & a:hover {
-      background-color: var(--color-quintenary);
+      background-color: rgb(var(--color-quinary));
       color: white;
     }
   }
@@ -87,13 +89,15 @@
     align-items: center;
 
     & big {
-      color: var(--color-quintenary);
+      color: rgb(var(--color-quinary));
+      padding-bottom: 0.5em;
       font-weight: 700;
     }
 
     & ul {
       list-style: none;
-      display: flex;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
 
       & li {
         display: flex;
@@ -102,7 +106,7 @@
         margin: 0 1rem;
 
         & :nth-child(1) {
-          color: var(--color-quintenary);
+          color: rgb(var(--color-quinary));
         }
       }
 
@@ -120,14 +124,15 @@
 
     & a {
       text-decoration: none;
-      border: 2px solid var(--color-quintenary);
-      color: var(--color-quintenary);
+      font-weight: 700;
+      border: 2px solid rgb(var(--color-quinary));
+      color: rgb(var(--color-quinary));
       padding: 0.75em 1.25em;
       margin: 0 0.25em;
     }
 
     & a:hover {
-      background-color: var(--color-quintenary);
+      background-color: rgb(var(--color-quinary));
       color: white;
     }
   }
