--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -67,6 +67,7 @@
 
     & a {
       padding: 0.75em 1.25em;
+      text-align: center;
       margin: 0.25em;
       text-decoration: none;
       font-weight: 700;
@@ -139,15 +140,39 @@
 }
 
 @media (max-width: 600px) {
-  .technologies {
+  .modal-content {
+
+    & .close-button {
+      padding: 0.5em 0.75em;
+      margin-top: -1.5em;
+      margin-right: -1.5em;
+    }
+
+    & h4 {
+      font-size: 1rem !important;
+      width: 80%;
+    }
     
     & a {
-      padding: 0.25em 0;
-      flex-basis:content;
+      flex-grow: 1;
+      padding: 0.5em 1em !important;
+      flex-basis: content;
+      font-size: 8pt !important;
+    }
+
+    & p {
+      font-size: 8pt !important;
     }
   }
 
-  .admin-creds > big {
-    font-size: 1rem;
-  }
+  .admin-creds {
+    padding-bottom: 0 !important;
+    & big {
+      font-size: 0.75rem;
+    }
+
+    & span {
+      font-size: 0.625rem !important;
+    }
+}
 }
